Fix brand image alignment

--- a/src/public/css/custom.css
+++ b/src/public/css/custom.css
@@ -13,6 +13,20 @@ body {
   text-shadow: 1px 1px 0px rgba(0, 0, 0, 0.49);
 }
 
+.navbar-brand {
+    display: flex;
+}
+
+.navbar-brand img {
+    width: 40px;
+    height: 40px;
+    margin: -10px 0;
+}
+
+.navbar-brand span {
+    margin: 2px 10px;
+}
+
 .about li:nth-child(1) a,
 .members li:nth-child(2) a,
 .portfolio li:nth-child(3) a,
